--- a/TP/pom.xml
+++ b/TP/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.ortools</groupId>
+            <artifactId>ortools-java</artifactId>
+            <version>9.10.4067</version>
+        </dependency>
     </dependencies>
 
 
